<resources>
    <string name="app_name">ZYFTP</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="notif_server_starting">远程管理服务已启动</string>
    <string name="notif_title">FTP远程管理服务正在运行</string>
    <string name="notif_text">地址:%1$s</string>
    <string name="stop_server">停止FTP服务</string>
    <string name="start_server">开启远程FTP服务</string>
    <string name="aboutcontnt">简介：ZYFTP是一个简单的FTP文件管理器,允许您的安卓设备运行文件传输服务器
        \n\n功能：自定义用户名、密码和端口号
        \n\n用法：在Windows资源管理器地址栏里面输入显示的ftp地址即可访问相应的手机内存\n\n维护：hdfg159(hdfg159@126.com)
        \ngithub主页：http://github.com/hdfg159\n\n
        感谢ppareit的github项目:http://github.com/ppareit/swiftp\n\n
    </string>
    <string name="newcontent">
        版本-0.1：\n
        +2015.12.25 发布0.1版本，实现基本的ftp功能。\n\n
        版本-0.2\n
        +2016.1.25 发布0.2版本，添加沉浸状态栏。\n\n
        版本-0.3\n
        +2016.1.29 添加设置页面，可以自定义用户名、端口号和密码。\n
        +2016.1.30 添加FTP访问自定义路径和重置功能。\n\n
        版本-0.4\n
        +2016.1.30 修正界面的显示问题，更改程序退出方式。\n\n
        版本-0.5\n
        +2016.1.30 设置界面输入框进行判断。\n\n
        版本-0.6\n
        +2016.1.31 改变主页ftp信息更新方式，通知栏显示问题优化。\n
        +2016.1.31 侧滑栏改变被选中状态，添加读取设置功能。\n\n
        版本-0.6.5\n
        +2016.2.1 一些设置项优化\n\n
        版本-1.0 final\n
        +2016.2.2 新增加匿名访问功能。部分功能优化。\n\n
        版本-1.1\n
        +2016.2.7 设置页面下拉刷新清空设置选项，适配小屏幕，改变程序退出方式，主界面布局调整。\n\n
        版本-1.2\n
        +2016.2.15 改变程序退出方式,主界面功能小更新。\n\n
        版本-1.3\n
        +2016.2.17 修复旋转屏幕出现问题。\n\n
        版本-2.0 final\n
        +2016.2.18 设置页面增加选择路径。\n\n
        版本-2.1\n
        +2016.2.23 路径选择界面文件排序问题修复，修复进入目录滑动条不显示。\n\n
        版本-2.2\n
        +2016.2.24 设置界面布局更新。\n\n
        版本-2.3\n
        +2016.3.3 布局代码优化，文件列表显示文字和位置问题\n\n
    </string>
    <string name="tips">提示</string>
    <string name="ServeisRunning">服务正在运行，请关闭服务再进入设置</string>
    <string name="StopServe">关闭服务</string>
    <string name="update_content">更新日志</string>
    <string name="readconfig">读取上次设置</string>
    <string name="reset">重置所有设置</string>
    <string name="password">请输入密码</string>
    <string name="username">请输入用户名</string>
    <string name="input_setting">请在下面输入你设置的内容</string>
    <string name="nmvisit">匿名访问</string>
    <string name="dir">请输入路径</string>
    <string name="port">请输入端口号</string>
    <string name="ftpswith">远程管理开关</string>
    <string name="wifiuser">FTP用户信息\n\n</string>
    <string name="ftpinfo">FTP信息</string>
    <string name="wifiinfo">暂时没有链接WiFi</string>
    <string name="selectdir">选择路径</string>
    <string name="selecteddir">当前目录：</string>
    <string name="help">帮助</string>
    <string name="checknowifi">暂时没检测到wifi（点击图片进入wifi设置）</string>
    <string name="passwordhint">密码 (1–16位字母或数字)</string>
    <string name="usernamehint">用户名 (1–16位字母或数字)</string>
    <string name="porthint">端口号 (4位数字)</string>
    <string name="pathhint">输入路径 例如:/mnt/sdcard/</string>
    <string name="dontopenfile">暂不支持打开文件</string>
    <string name="reset_tips">确认重置?将会丢失之前的设置</string>
</resources>
