<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coorlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/wifiimg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_nowifi" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/wifiinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/wifiimg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/wifiinfo" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/ftpinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/wifiinfo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:onClick="true"
                    android:text="@string/ftpinfo"
                    android:visibility="invisible" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/wifiuser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/ftpinfo"
                    android:layout_below="@+id/ftpinfo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/wifiuser"
                    android:visibility="invisible" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/ftpswith"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/wifiuser"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:checked="false"
                    android:text="@string/ftpswith" />

            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>